--- a/Task 1.ipynb
+++ b/Task 1.ipynb
@@ -40,7 +40,7 @@
         "TASK 1:\n",
         "Once comfortable, please study the existing FLINTcloud templates and the Land Sector Datasets repository. Find an appropriate forest dataset and propose a location of interest (pick a forest you like!). Find another datasets of interest and document a workflow to extract and summarise forest squares in your location\n",
         "\n",
-        "in this notebook, we will work with three datasets, locations of interest inlcude Kenya, solomon Islands, DRC, Cameroon and Ghana"
+        "in this notebook, we will work with five datasets, locations of interest inlcude Kenya, solomon Islands, DRC, Cameroon and Ghana"
       ]
     },
     {
